<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Touchpaint</string>
    <string name="mode">Mode</string>
    <string name="paint">Paint</string>
    <string name="show_event_rate">Show event rate</string>
    <string name="size_1px">1 px</string>
    <string name="size_3px">3 px</string>
    <string name="size_5px">5 px</string>
    <string name="size_10px">10 px</string>
    <string name="size_15px">15 px</string>
    <string name="size_50px">50 px</string>
    <string name="size_150px">150 px</string>
    <string name="brush_size">Brush size</string>
    <string name="fill">Fill</string>
    <string name="follow">Follow</string>
    <string name="blank">Blank redraw</string>
    <string name="clear_delay_250ms">250 ms</string>
    <string name="clear_delay_500ms">500 ms</string>
    <string name="clear_delay_1000ms">1 second</string>
    <string name="clear_delay_2000ms">2 seconds</string>
    <string name="clear_delay_5000ms">5 seconds</string>
    <string name="never">Never</string>
    <string name="on_next_stroke">On next stroke</string>
    <string name="clear_delay">Clear delay</string>
    <string name="clear_delay_100ms">100 ms</string>
    <string name="size_physical_1px">1 physical pixel</string>
    <string name="size_2px">2 px</string>
    <string name="preference_mode" translatable="false"><xliff:g id="preference_key">mode</xliff:g></string>
    <string name="preference_brush_size" translatable="false"><xliff:g id="preference_key">brush_size</xliff:g></string>
    <string name="preference_paint_clear_delay" translatable="false"><xliff:g id="preference_key">paint_clear_delay</xliff:g></string>
    <string name="preference_measure_event_rate" translatable="false"><xliff:g id="preference_key">measure_event_rate</xliff:g></string>
    <string name="preference_show_event_points" translatable="false"><xliff:g id="preference_key">show_event_points</xliff:g></string>
    <string name="preference_batch_events" translatable="false"><xliff:g id="preference_key">batch_events</xliff:g></string>
    <string name="highlight_event_points">Highlight event points</string>
    <string name="clear">Clear</string>
    <string name="batch_events">Batch events</string>
</resources>